snapshots/syntax/library/functions/financial/nper/nper_concatenation.snap
---
source: src/syntax/library/functions/financial/nper.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: DimStatement
      children:
        - kind: DimKeyword
          text: Dim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: msg
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: msg
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: BinaryExpression
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"Payoff time: \""
                - kind: Whitespace
                  text: " "
                - kind: Ampersand
                  text: "&"
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: NPer
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: r
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: p
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: v
                    - kind: RightParenthesis
                      text: )
            - kind: Whitespace
              text: " "
            - kind: Ampersand
              text: "&"
            - kind: Whitespace
              text: " "
            - kind: StringLiteralExpression
              children:
                - kind: StringLiteral
                  text: "\" months\""
        - kind: Newline
          text: "\n"
